# blokus-ai

./: .gitignore  README.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/src/blokus_ai/: __init__.py
backend/src/blokus_ai/ai/: __init__.py  agents.py  benchmark.py  evaluation.py  mcts.py  types.py
backend/src/blokus_ai/api/: main.py  schemas.py
backend/src/blokus_ai/engine/: __init__.py  game.py  models.py  pieces.py
backend/src/blokus_ai/training/: __init__.py  dataset.py  encoding.py  model.py  pipeline.py  self_play.py  train.py
docs/: architecture.md  training-roadmap.md
tests/: conftest.py
tests/ai/: test_agents.py  test_benchmark.py
tests/api/: test_api.py
tests/engine/: test_rules.py  test_variants.py
tests/training/: test_training.py
web/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.test.tsx  App.tsx  index.css  main.tsx
web/src/api/: client.ts
web/src/components/: BoardGrid.tsx  ControlsPanel.tsx  PieceInventoryPanel.tsx  PieceMiniature.tsx  PlayMode.tsx  SuggestionsPanel.tsx  WorkbenchMode.tsx
web/src/constants/: pieces.ts
web/src/types/: blokus.ts
web/src/utils/: agents.ts  pieces.ts  state.ts
