[project]
name = "blokus-ai"
version = "0.1.0"
description = "Blokus AI backend with exact rules, baseline agents, and a move-suggestion API."
readme = "../README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "x-juri" }
]
dependencies = [
  "fastapi>=0.128.0",
  "pydantic>=2.7.0",
  "torch>=2.4.0",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.6.0"
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "../tests"]
testpaths = ["../tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

